--- a/ml-models/voice-identification.ipynb
+++ b/ml-models/voice-identification.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9078666c",
+   "id": "13bc3dd0",
    "metadata": {},
    "source": [
-    "Data spillting, pre processign and feartire extraciotgn "
+    "Imports"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06780e04",
+   "id": "dc09c51a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,156 @@
     "from torch.utils.data import Dataset\n",
     "from glob import glob\n",
     "\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "\n",
+    "from tqdm.notebook import tqdm\n",
+    "from torch.utils.data import DataLoader\n",
+    "import torch.optim as optim\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "import shutil\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf485c06",
+   "metadata": {},
+   "source": [
+    "Sample of Vox1celeb dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23e1f612",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dataset split\n",
+    "base_path = os.path.join(os.getcwd(), 'datasets', 'vox1_dev')\n",
+    "print(base_path)\n",
+    "\n",
+    "#Each folder contains a different speaker\n",
+    "\n",
+    "speaker_count = sum(os.path.isdir(os.path.join(base_path, entry)) for entry in os.listdir(base_path))\n",
+    "print(\"Number of original Speakers : \",speaker_count)\n",
+    "#Select a random selection of speakers, as inital dataset of 1211 speakers is roughly 30GB. will take a sample of 150 speakers(12.3%), aroudn 3.7GB\n",
+    "\n",
+    "\n",
+    "# Destination path for subset\n",
+    "train_path = os.path.join(os.getcwd(), 'datasets', 'vox1_subset_150')\n",
+    "os.makedirs(train_path, exist_ok=True)\n",
+    "\n",
+    "\n",
+    "# Set seed and select random 150 speakers\n",
+    "random.seed(42)\n",
+    "all_speakers = [entry for entry in os.listdir(base_path)\n",
+    "                if os.path.isdir(os.path.join(base_path, entry))]\n",
+    "selected_speakers = random.sample(all_speakers, 150)\n",
+    "\n",
+    "# Copy selected speakers and their full contents to the subset folder\n",
+    "for speaker in selected_speakers:\n",
+    "    src_speaker_path = os.path.join(base_path, speaker)\n",
+    "    dest_speaker_path = os.path.join(train_path, speaker)\n",
+    "    shutil.copytree(src_speaker_path, dest_speaker_path)\n",
+    "\n",
+    "#print(f\"Subset dataset created at: {train_path}\")\n",
+    "\n",
+    "\n",
+    "# Print the selected speaker folders\n",
+    "count = 0\n",
+    "#print(\"Selected speakers:\")\n",
+    "for speaker in selected_speakers:\n",
+    "    count +=1\n",
+    "    #print(speaker)\n",
+    "\n",
+    "print(\"Number of train Speakers : \",count)\n",
+    "\n",
+    "\n",
+    "\n",
+    "test_path = os.path.join(os.getcwd(), 'datasets', 'vox1_subset_test')\n",
+    "\n",
+    "test_speaker_count = sum(os.path.isdir(os.path.join(test_path, entry)) for entry in os.listdir(test_path))\n",
+    "print(\"Number of test Speakers : \",test_speaker_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a9da789",
+   "metadata": {},
+   "source": [
+    "Splitting that sample into train and val (already a pre split test folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd6cc98e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "source_path = os.path.join(os.getcwd(), 'datasets', 'vox1_subset_150')\n",
+    "\n",
+    "train_folder = os.path.join(source_path, 'train_data')\n",
+    "val_folder = os.path.join(source_path, 'val_data')\n",
+    "\n",
+    "os.makedirs(train_folder, exist_ok=True)\n",
+    "os.makedirs(val_folder, exist_ok=True)\n",
+    "\n",
+    "speaker_folders = [folder for folder in os.listdir(source_path)\n",
+    "                   if os.path.isdir(os.path.join(source_path, folder)) and folder not in ['train_data', 'val_data']]\n",
+    "\n",
+    "random.seed(42)\n",
+    "random.shuffle(speaker_folders)\n",
+    "split_index = int(0.8 * len(speaker_folders))\n",
+    "train_speakers = speaker_folders[:split_index]\n",
+    "val_speakers = speaker_folders[split_index:]\n",
+    "\n",
+    "for speaker in train_speakers:\n",
+    "    src = os.path.join(source_path, speaker)\n",
+    "    dst = os.path.join(train_folder, speaker)\n",
+    "    shutil.move(src, dst)\n",
+    "\n",
+    "for speaker in val_speakers:\n",
+    "    src = os.path.join(source_path, speaker)\n",
+    "    dst = os.path.join(val_folder, speaker)\n",
+    "    shutil.move(src, dst)\n",
+    "\n",
+    "print(f\"{len(train_speakers)} speakers moved to train_data, {len(val_speakers)} to val_data.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9078666c",
+   "metadata": {},
+   "source": [
+    "Preprocessing and feature extraction\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06780e04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\"\"\"\n",
     "def preprocess_audio(y, sr, target_duration=6.0, apply_preemphasis=False, apply_reduction=False, coef=0.5, normalise='rms'):\n",
     "    \n",
     "    # Trim leading/trailing silence\n",
@@ -140,67 +290,143 @@
     "        mel = torch.tensor(load(\"mel\"), dtype=torch.float32).unsqueeze(0)  \n",
     "\n",
     "\n",
-    "        return mel, mfcc, chroma, tonnetz, contrast, torch.tensor(label)\n"
+    "        return mel, mfcc, chroma, tonnetz, contrast, torch.tensor(label)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86df4817",
+   "metadata": {},
+   "source": [
+    "Cleanier version of pre and featrie exztatoin/ saving"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa56d387",
+   "id": "1f8aa277",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "\n",
-    "\n",
-    "feature_root = \"datasets/vox1_subset_150/features_aligned_ready\"\n",
-    "dataset = AudioFeatureDataset(feature_root)\n",
-    "\n",
-    "\n",
-    "\n",
-    "def check_feature_shapes(dataset, idx=0):\n",
-    "    print(f\"\\Checking sample index: {idx}\\n{'='*50}\")\n",
+    "def preprocess_audio(y, sr, target_duration=6.0, apply_preemphasis=False, apply_reduction=False, coef=0.5, normalise='rms'):\n",
     "    \n",
-    "    rel_path = dataset.valid_paths[idx]\n",
-    "    print(f\"Sample path: {rel_path}\")\n",
+    "    # Trim leading/trailing silence\n",
+    "    y, _ = librosa.effects.trim(y)\n",
     "\n",
-    "    for feature in dataset.feature_dirs.keys():\n",
-    "      \n",
-    "        path = os.path.join(dataset.base_path, dataset.feature_dirs[feature], rel_path)\n",
-    "        arr = np.load(path)\n",
+    "    # Apply noise reduction / dereverberation\n",
+    "    if apply_reduction:\n",
+    "        y = nr.reduce_noise(y=y, sr=sr)\n",
     "\n",
-    "        print(f\"\\n{feature.upper()}\")\n",
-    "        print(f\"Raw .npy shape: {arr.shape}\")\n",
+    "    # Apply pre-emphasis filter\n",
+    "    if apply_preemphasis:\n",
+    "        y = librosa.effects.preemphasis(y, coef=coef)\n",
     "\n",
-    "       \n",
-    "        tensor = torch.tensor(arr, dtype=torch.float32)\n",
+    "    # Normalisation method\n",
+    "    if normalise == 'rms':\n",
+    "        rms = np.sqrt(np.mean(y**2))\n",
+    "        y = y / (rms + 1e-6)\n",
+    "    elif normalise == 'peak':\n",
+    "        y = y / (np.max(np.abs(y)) + 1e-6)\n",
     "\n",
-    "        if feature == \"mel\":\n",
-    "            model_input = tensor.unsqueeze(0)  \n",
-    "            print(f\"Model input shape (after unsqueeze): {model_input.shape}\")\n",
-    "        else:\n",
+    "    # Duration control: pad or truncate\n",
+    "    target_length = int(sr * target_duration)\n",
+    "    if len(y) < target_length:\n",
+    "        y = np.pad(y, (0, target_length - len(y)))\n",
+    "    else:\n",
+    "        y = y[:target_length]\n",
+    "\n",
+    "    return y\n",
+    "\n",
+    "\n",
+    "def extract_and_save_all(input_root, output_root, sr=22050, target_duration=6.0, apply_preemphasis=False, coef=0.5, normalise='rms'):\n",
+    "    input_root = Path(input_root)\n",
+    "    output_root = Path(output_root)\n",
+    "\n",
+    "    for split in [\"train\", \"val\"]:  \n",
+    "        input_folder = input_root / split\n",
+    "        output_base = output_root / f\"preprocessed_{split}\"\n",
+    "\n",
+    "        print(f\"Looking in: {input_folder}\")\n",
+    "        wav_files = [f for f in input_folder.glob(\"*.wav\")]\n",
+    "        print(f\"Found {len(wav_files)} files in '{split}'\")\n",
+    "\n",
+    "        for wav_file in tqdm(wav_files):\n",
     "            try:\n",
-    "                reduced = tensor.mean(dim=1)\n",
-    "                print(f\"Model input shape (after mean over time): {reduced.shape}\")\n",
-    "            except:\n",
-    "                print(\" Shape error in mean(dim=1). Try mean(dim=0)?\")\n",
+    "                y, _ = librosa.load(wav_file, sr=sr)\n",
+    "                y = preprocess_audio(y, sr, target_duration, apply_preemphasis, coef, normalise)\n",
     "\n",
-    "    print(\"\\nDone shape check.\\n\")\n",
+    "                base_name = wav_file.stem + \".npy\"\n",
+    "\n",
+    "                feature_dict = {\n",
+    "                    \"mel_spectrogram\": librosa.feature.melspectrogram(y=y, sr=sr, n_mels=128),\n",
+    "                    \"mfcc\": librosa.feature.mfcc(y=y, sr=sr, n_mfcc=20),\n",
+    "                    \"chroma\": librosa.feature.chroma_stft(y=y, sr=sr),\n",
+    "                    \"tonnetz\": librosa.feature.tonnetz(y=librosa.effects.harmonic(y), sr=sr),\n",
+    "                    \"spectral_contrast\": librosa.feature.spectral_contrast(y=y, sr=sr),\n",
+    "                }\n",
+    "\n",
+    "                for feature_name, data in feature_dict.items():\n",
+    "                    out_path = output_base / feature_name / base_name\n",
+    "                    out_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "                    np.save(out_path, data.astype(np.float32))\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                print(f\"[ERROR] {wav_file.name}: {e}\")\n",
+    "\n",
+    "#Run the feature extraction\n",
+    "\n",
+    "#extract_and_save_all(\"datasets/release_in_the_wild\", \"datasets/release_in_the_wild\")\n",
     "\n",
     "\n",
+    "#same coide but this tiem test, as its in a different location\n",
+    "def extract_and_save_all(input_root, output_root, sr=22050, target_duration=6.0, apply_preemphasis=False, coef=0.5, normalise='rms'):\n",
+    "    input_root = Path(input_root)\n",
+    "    output_root = Path(output_root)\n",
     "\n",
-    "check_feature_shapes(dataset, idx=0)  \n"
+    "    for split in [\"test\"]:  \n",
+    "        input_folder = input_root / split\n",
+    "        output_base = output_root / f\"preprocessed_{split}\"\n",
+    "\n",
+    "        print(f\"Looking in: {input_folder}\")\n",
+    "        wav_files = [f for f in input_folder.glob(\"*.wav\")]\n",
+    "        print(f\"Found {len(wav_files)} files in '{split}'\")\n",
+    "\n",
+    "        for wav_file in tqdm(wav_files):\n",
+    "            try:\n",
+    "                y, _ = librosa.load(wav_file, sr=sr)\n",
+    "                y = preprocess_audio(y, sr, target_duration, apply_preemphasis, coef, normalise)\n",
+    "\n",
+    "                base_name = wav_file.stem + \".npy\"\n",
+    "\n",
+    "                feature_dict = {\n",
+    "                    \"mel_spectrogram\": librosa.feature.melspectrogram(y=y, sr=sr, n_mels=128),\n",
+    "                    \"mfcc\": librosa.feature.mfcc(y=y, sr=sr, n_mfcc=20),\n",
+    "                    \"chroma\": librosa.feature.chroma_stft(y=y, sr=sr),\n",
+    "                    \"tonnetz\": librosa.feature.tonnetz(y=librosa.effects.harmonic(y), sr=sr),\n",
+    "                    \"spectral_contrast\": librosa.feature.spectral_contrast(y=y, sr=sr),\n",
+    "                }\n",
+    "\n",
+    "                for feature_name, data in feature_dict.items():\n",
+    "                    out_path = output_base / feature_name / base_name\n",
+    "                    out_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "                    np.save(out_path, data.astype(np.float32))\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                print(f\"[ERROR] {wav_file.name}: {e}\")\n",
+    "\n",
+    "#Run the feature extraction\n",
+    "\n",
+    "#extract_and_save_all(\"datasets/release_in_the_wild\", \"datasets/release_in_the_wild\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1869c7ed",
+   "cell_type": "markdown",
+   "id": "503851eb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Model Architecture (CNN+LSTM and DenseNN)"
+   ]
   },
   {
    "cell_type": "code",
@@ -209,10 +435,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
     "\n",
     "\n",
     "\n",
@@ -294,7 +516,6 @@
     "    \n",
     "\n",
     "\n",
-    "\n",
     "class AudioFusionModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -311,7 +532,7 @@
     "            nn.Dropout(0.2),\n",
     "            nn.Linear(512, 256),\n",
     "            nn.ReLU(),  \n",
-    "            nn.Dropout(0.1),\n",
+    "            nn.Dropout(0.3),\n",
     "        )\n",
     "\n",
     "        self.embedding_out = nn.Linear(256, 128)  \n",
@@ -352,9 +573,7 @@
     "\"\"\"\n",
     "\n",
     "\"\"\"\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
+    "\n",
     "\n",
     "class ConvolutionLSTMBlock(nn.Module):\n",
     "    def __init__(self):\n",
@@ -470,6 +689,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b159432",
+   "metadata": {},
+   "source": [
+    "Triplet loss dataset creation "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d415161e",
@@ -477,9 +704,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "import random\n",
-    "\n",
-    "from tqdm import tqdm\n",
     "\n",
     "class TripletAudioDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, base_dataset):\n",
@@ -522,17 +746,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48ef1236",
+   "metadata": {},
+   "source": [
+    "Training loop (using the triplet loss as the learning loss function )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d6d5d0f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm.notebook import tqdm\n",
-    "from torch.utils.data import DataLoader\n",
-    "import torch.optim as optim\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "\n",
     "\n",
     "def train_triplet(model, triplet_dataset, epochs=20, batch_size=32, lr=1e-4, device='cuda', save_csv_path=None):\n",
@@ -605,6 +832,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fbc6a03",
+   "metadata": {},
+   "source": [
+    "Running Loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "917424e6",
@@ -620,14 +855,6 @@
     "torch.save(model.state_dict(), \"voice_model.pth\")\n",
     "print(\"\\nModel saved to 'val_model.pth'\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd5ac949",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
