--- a/ml-models/deepfake-detection.ipynb
+++ b/ml-models/deepfake-detection.ipynb
@@ -1841,7 +1841,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extract LA features:  17%|█▋        | 12048/71237 [59:50<4:52:11,  3.38file/s, ETA 17640s]"
+      "Extract LA features:  70%|███████   | 49890/71237 [4:33:18<1:51:54,  3.18file/s, ETA 7017s]  "
      ]
     }
    ],
