--- a/ml-models/deepfake-detection.ipynb
+++ b/ml-models/deepfake-detection.ipynb
@@ -1834,14 +1834,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extract LA features:  70%|███████   | 49890/71237 [4:33:18<1:51:54,  3.18file/s, ETA 7017s]  "
+      "Extract LA features: 100%|██████████| 71237/71237 [6:17:27<00:00,  3.15file/s, ETA 0s]       \n"
      ]
     }
    ],
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1988,18 +1988,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import (\n",
     "    accuracy_score, precision_score, recall_score, f1_score,\n",
-    "    roc_auc_score, confusion_matrix, roc_curve\n",
+    "    roc_auc_score, confusion_matrix, roc_curve, ConfusionMatrixDisplay\n",
     ")\n",
     "from scipy.optimize import brentq\n",
     "from scipy.interpolate import interp1d\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "import numpy as np\n",
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
@@ -2012,7 +2011,7 @@
     "    model.eval()\n",
     "    model.to(device)\n",
     "\n",
-    "    all_probs, all_preds, all_labels = [], [], []\n",
+    "    all_probs, all_preds_05, all_labels = [], [], []\n",
     "\n",
     "    with torch.no_grad():\n",
     "        for batch in tqdm(loader, desc=\"Testing\"):\n",
@@ -2021,38 +2020,69 @@
     "            labels = labels.to(device).unsqueeze(1)\n",
     "            outputs = model(*features)\n",
     "            probs = torch.sigmoid(outputs).cpu().numpy().squeeze()\n",
-    "            preds = (probs > 0.5).astype(int)\n",
+    "            preds_05 = (probs > 0.5).astype(int)\n",
     "\n",
     "            all_probs.extend(probs.tolist())\n",
-    "            all_preds.extend(preds.tolist())\n",
+    "            all_preds_05.extend(preds_05.tolist())\n",
     "            all_labels.extend(labels.cpu().numpy().astype(int).tolist())\n",
     "\n",
     "    all_labels = np.array(all_labels)\n",
-    "    all_preds  = np.array(all_preds)\n",
     "    all_probs  = np.array(all_probs)\n",
+    "    all_preds_05 = np.array(all_preds_05)\n",
     "\n",
-    "    # compute metrics\n",
-    "    acc  = accuracy_score(all_labels, all_preds)\n",
-    "    prec = precision_score(all_labels, all_preds, zero_division=0)\n",
-    "    rec  = recall_score(all_labels, all_preds, zero_division=0)\n",
-    "    f1   = f1_score(all_labels, all_preds, zero_division=0)\n",
-    "    auc  = roc_auc_score(all_labels, all_probs)\n",
+    "    # ROC and EER\n",
+    "    fpr, tpr, thresholds = roc_curve(all_labels, all_probs)\n",
+    "    auc = roc_auc_score(all_labels, all_probs)\n",
+    "    eer = brentq(lambda x: 1. - x - interp1d(fpr, tpr)(x), 0., 1.)\n",
     "\n",
-    "    fpr, tpr, _ = roc_curve(all_labels, all_probs)\n",
-    "    eer = brentq(lambda x: 1.-x - interp1d(fpr, tpr)(x), 0., 1.)\n",
+    "    # Optimal threshold based on max(TPR - FPR)\n",
+    "    optimal_idx = np.argmax(tpr - fpr)\n",
+    "    optimal_threshold = thresholds[optimal_idx]\n",
+    "    preds_optimal = (all_probs > optimal_threshold).astype(int)\n",
     "\n",
-    "    print(f\"Accuracy:  {acc:.4f}\")\n",
-    "    print(f\"Precision: {prec:.4f}\")\n",
-    "    print(f\"Recall:    {rec:.4f}\")\n",
-    "    print(f\"F1 Score:  {f1:.4f}\")\n",
-    "    print(f\"AUC:       {auc:.4f}\")\n",
+    "    print(\"\\n--- Evaluation at Threshold = 0.5 ---\")\n",
+    "    print(f\"Accuracy:  {accuracy_score(all_labels, all_preds_05):.4f}\")\n",
+    "    print(f\"Precision: {precision_score(all_labels, all_preds_05, zero_division=0):.4f}\")\n",
+    "    print(f\"Recall:    {recall_score(all_labels, all_preds_05, zero_division=0):.4f}\")\n",
+    "    print(f\"F1 Score:  {f1_score(all_labels, all_preds_05, zero_division=0):.4f}\")\n",
+    "\n",
+    "    print(\"\\n--- Evaluation at Optimal Threshold ---\")\n",
+    "    print(f\"Optimal Threshold: {optimal_threshold:.4f}\")\n",
+    "    print(f\"Accuracy:  {accuracy_score(all_labels, preds_optimal):.4f}\")\n",
+    "    print(f\"Precision: {precision_score(all_labels, preds_optimal, zero_division=0):.4f}\")\n",
+    "    print(f\"Recall:    {recall_score(all_labels, preds_optimal, zero_division=0):.4f}\")\n",
+    "    print(f\"F1 Score:  {f1_score(all_labels, preds_optimal, zero_division=0):.4f}\")\n",
+    "\n",
+    "    print(f\"\\nAUC:       {auc:.4f}\")\n",
     "    print(f\"EER:       {eer:.4f}\")\n",
     "\n",
-    "    # confusion matrix\n",
-    "    cm = confusion_matrix(all_labels, all_preds)\n",
-    "    disp = ConfusionMatrixDisplay(cm, display_labels=[\"spoof\",\"bona-fide\"])\n",
+    "    # Confusion matrix for optimal threshold\n",
+    "    cm = confusion_matrix(all_labels, preds_optimal)\n",
+    "    disp = ConfusionMatrixDisplay(cm, display_labels=[\"spoof\", \"bona-fide\"])\n",
     "    disp.plot(cmap=plt.cm.Blues)\n",
-    "    plt.show()\n"
+    "    plt.title(\"Confusion Matrix @ Optimal Threshold\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "    # ROC Curve\n",
+    "    eer_x = eer\n",
+    "    eer_y = 1 - eer\n",
+    "\n",
+    "    plt.figure(figsize=(6, 5))\n",
+    "    plt.plot(fpr, tpr, label=f\"AUC = {auc:.4f}\")\n",
+    "    plt.plot([0, 1], [0, 1], linestyle='--', color='grey', label=\"Random Guess\")\n",
+    "    plt.plot(eer_x, eer_y, 'ro', label=f\"EER = {eer:.4f}\")\n",
+    "    plt.xlabel(\"False Positive Rate\")\n",
+    "    plt.ylabel(\"True Positive Rate\")\n",
+    "    plt.title(\"ROC Curve\")\n",
+    "    plt.legend(loc=\"lower right\")\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -2064,24 +2094,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Aadil\\AppData\\Local\\Temp\\ipykernel_33632\\2307706330.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  torch.load(\"df_model.pth\", map_location=\"cpu\")\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "Missing datasets\\evaluation\\LA\\preprocessed_eval\\fake\\mfcc\\LA_E_1611480.npy",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[76], line 23\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# 1) Pull out one batch\u001b[39;00m\n\u001b[0;32m     22\u001b[0m debug_loader \u001b[38;5;241m=\u001b[39m DataLoader(dataset, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m32\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m---> 23\u001b[0m batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43miter\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdebug_loader\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# 4) run evaluation\u001b[39;00m\n\u001b[0;32m     26\u001b[0m evaluate_on_test_set(model, dataset, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m32\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Aadil\\anaconda3\\envs\\final-voice-system-env\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:701\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    698\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    699\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[0;32m    700\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[1;32m--> 701\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_next_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    702\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m    703\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m    704\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable\n\u001b[0;32m    705\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    706\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called\n\u001b[0;32m    707\u001b[0m ):\n",
-      "File \u001b[1;32mc:\\Users\\Aadil\\anaconda3\\envs\\final-voice-system-env\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:757\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    755\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_next_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    756\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_index()  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m--> 757\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dataset_fetcher\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfetch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m    758\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[0;32m    759\u001b[0m         data \u001b[38;5;241m=\u001b[39m _utils\u001b[38;5;241m.\u001b[39mpin_memory\u001b[38;5;241m.\u001b[39mpin_memory(data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_device)\n",
-      "File \u001b[1;32mc:\\Users\\Aadil\\anaconda3\\envs\\final-voice-system-env\\lib\\site-packages\\torch\\utils\\data\\_utils\\fetch.py:52\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[1;34m(self, possibly_batched_index)\u001b[0m\n\u001b[0;32m     50\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[0;32m     51\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 52\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[idx] \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[0;32m     53\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     54\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[1;32mc:\\Users\\Aadil\\anaconda3\\envs\\final-voice-system-env\\lib\\site-packages\\torch\\utils\\data\\_utils\\fetch.py:52\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     50\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[0;32m     51\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 52\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[0;32m     53\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     54\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
-      "Cell \u001b[1;32mIn[74], line 48\u001b[0m, in \u001b[0;36mAudioFeatureDataset.__getitem__\u001b[1;34m(self, idx)\u001b[0m\n\u001b[0;32m     46\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeature_root \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpreprocessed_eval\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m/\u001b[39m label_dir \u001b[38;5;241m/\u001b[39m feat \u001b[38;5;241m/\u001b[39m file_id\n\u001b[0;32m     47\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39mexists():\n\u001b[1;32m---> 48\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMissing \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     49\u001b[0m arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(path)\n\u001b[0;32m     50\u001b[0m t \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(arr, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: Missing datasets\\evaluation\\LA\\preprocessed_eval\\fake\\mfcc\\LA_E_1611480.npy"
+      "C:\\Users\\Aadil\\AppData\\Local\\Temp\\ipykernel_33632\\3158313424.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  torch.load(\"df_model.pth\", map_location=\"cpu\")\n",
+      "Testing:  66%|██████▌   | 1470/2227 [48:03<23:36,  1.87s/it] "
      ]
     }
    ],
